# mms-accounts

./: .cursorrules  .gitignore  Cargo.toml  Trunk.toml  index.html  problem.txt  rules.json
.github/workflows/: deploy.yml
src/: app.rs  lib.rs
src/components/: mod.rs
src/components/admin/: mod.rs  stats.rs  user_table.rs
src/components/auth/: forgot.rs  login.rs  mod.rs  oauth_buttons.rs  reset.rs  signup.rs
src/components/dashboard/: admin_permissions.rs  admin_r2.rs  admin_registry.rs  admin_users.rs  admin_view.rs  credentials.rs  header.rs  mod.rs  overview.rs  profile.rs  registry.rs  services.rs  settings.rs  sidebar.rs
src/components/icons/: mod.rs
src/components/landing/: features.rs  hero.rs  mod.rs
src/components/ui/: mod.rs
src/supabase/: admin.rs  auth.rs  client.rs  mod.rs
styles/: admin-permissions.css  admin-r2.css  admin-registry.css  admin-shared.css  admin-users.css  admin-view.css  admin.css  auth.css  components.css  credentials.css  dashboard-layout.css  dashboard.css  landing.css  main.css  overview.css  profile.css  registry.css  services.css  settings.css  sidebar.css  tokens.css
