[package]
name = "mms-accounts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  # Core
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  # Form elements
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  # Storage
  "Storage",
  # Events
  "EventTarget",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "SubmitEvent",
  "InputEvent",
  "FocusEvent",
  # Navigation
  "Location",
  "History",
  # Intersection observer (scroll reveal)
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "IntersectionObserverInit",
  # DOM
  "DomTokenList",
  "NodeList",
  "CssStyleDeclaration",
  # Scroll
  "ScrollToOptions",
  "ScrollBehavior",
] }

# HTTP — gloo-net uses the browser's native fetch API directly (no AbortController fragility)
# reqwest 0.11 was replaced because its internal AbortController gets signalled when
# the WASM future is dropped during Leptos reactive re-renders, producing NS_BINDING_ABORTED.
gloo-net = { version = "0.6", features = ["http", "json"] }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# Browser storage (localStorage for JWT)
gloo-storage = "0.3"

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
debug         = false

[profile.dev]
opt-level = 1
