[package]
name = "mms-accounts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlImageElement",
  "Storage",
  "EventTarget",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "SubmitEvent",
  "InputEvent",
  "FocusEvent",
  "Location",
  "History",
  "Crypto",
  "SubtleCrypto",
  "DomTokenList",
  "NodeList",
  "CssStyleDeclaration",
  "ScrollToOptions",
  "ScrollBehavior",
  "Clipboard",
  "Navigator",
  # File upload
  "Blob",
  "File",
  "FileList",
] }

gloo-net = { version = "0.6", features = ["http", "json"] }

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

gloo-storage = "0.3"
gloo-timers  = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
debug         = false

[profile.dev]
opt-level = 1
